<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
    android:background="#FFCDD2"
android:gravity="center"
tools:context=".MainActivity"
    >

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/select_dress"
    android:textColor="#EC407A"
    android:textSize="20sp"
    android:gravity="center"
    android:textStyle="bold"
    android:layout_marginTop="30dp"
    android:background="#C8E6C9"
    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">
    <CheckBox
        android:id="@+id/kamiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/kameez"/>
    <CheckBox
        android:id="@+id/tops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/hi"/>
    <CheckBox
        android:id="@+id/gown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/go"/>

</LinearLayout>
<TextView
    android:id="@+id/dress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="18sp"
    android:textAllCaps="true"
    />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/select_dress_size"
    android:textSize="20sp"
    android:textColor="#EC407A"
    android:textStyle="bold"
    android:layout_marginTop="10dp"
    android:background="#C8E6C9"
    />
<RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/s"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/m"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/l"/>


</RadioGroup>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add_to_cart"
    android:textSize="20sp"
    android:textStyle="bold"
    android:layout_marginTop="10dp"
    android:textColor="#EC407A"
    android:background="#C8E6C9"
    />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    >
    <Button
        android:id="@+id/decrement"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/negative"
        android:textSize="18sp"
        android:gravity="center"
        android:backgroundTint="#FFAB91"
        />

    <TextView
        android:id="@+id/quantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial"
        android:textSize="20sp"
        android:layout_marginHorizontal="15dp"
        />
    <Button
        android:id="@+id/increment"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/positive"
        android:gravity="center"
        android:backgroundTint="#FFAB91"
        />
</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/each_500_bdt"
        android:textColor="#EC407A"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_bdt_0"
        android:textAllCaps="true"
        android:textSize="18sp" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginVertical="20dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_rating"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        />
    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:progressTint="@color/white"
        android:progressBackgroundTint="#0097A7"
        />
    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/rating_0_0"
        />
</LinearLayout>

<Button
    android:id="@+id/order_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    android:text="@string/place_your_order"
    android:backgroundTint="#F48FB1"
    android:textColor="@color/black"
    android:textStyle="bold"/>

</LinearLayout>
