<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:gravity="center"
    tools:context=".MainActivity2"
    android:background="#FFCDD2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brightness"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/level"
        android:layout_marginBottom="10dp"
        />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:max="255" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <Switch
            android:id="@+id/btn_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adaptive_brightness"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>


    <Button
        android:id="@+id/go_btn"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="#F48FB1"
        android:text="@string/enter_to"
        android:textColor="@color/black"
        android:textStyle="bold" />




</LinearLayout>
